add user data stats
