# src/app.js
@@ -16,6 +16,7 @@ const signinRouter = require('./resources/authentication/signin.router');
 const userRouter = require('./resources/users/user.router');
 const userWordsRouter = require('./resources/userWords/userWord.router');
 const statisticRouter = require('./resources/statistics/statistic.router');
+const userDataRouter = require('./resources/userData/userData.router');
 const settingRouter = require('./resources/settings/setting.router');
 const errorHandler = require('./errors/errorHandler');
 const checkAuthentication = require('./resources/authentication/checkAuthentication');
@@ -60,6 +61,8 @@ userRouter.use('/:id/words', userIdValidator, userWordsRouter);
 userRouter.use('/:id/statistics', userIdValidator, statisticRouter);
 
 userRouter.use('/:id/settings', userIdValidator, settingRouter);
+
+userRouter.use('/:id/user-data', userIdValidator, userDataRouter);
 
 app.use((req, res, next) => next(createError(NOT_FOUND)));
 
