# src/resources/users/user.model.js
@@ -5,6 +5,10 @@ const Schema = mongoose.Schema;
 
 const User = new Schema(
   {
+    userName: {
+      type: String,
+      required: false
+    },
     email: {
       type: String,
       required: true,
