# src/resources/users/user.service.js
@@ -4,6 +4,7 @@ const { AUTHENTICATION_ERROR } = require('../../errors/appErrors');
 const usersRepo = require('./user.db.repository');
 const statisticService = require('../statistics/statistic.service');
 const settingsService = require('../settings/setting.service');
+const userDataService = require('../userData/userData.service');
 
 const authenticate = async user => {
   const userEntity = await usersRepo.getUserByEmail(user.email);
@@ -18,7 +19,11 @@ const authenticate = async user => {
 
 const get = id => usersRepo.get(id);
 
-const save = user => usersRepo.save(user);
+const save = async user => {
+  const response = await usersRepo.save(user);
+  await userDataService.set(response.id);
+  return response;
+};
 
 const update = (id, user) => usersRepo.update(id, user);
 
@@ -26,6 +31,7 @@ const remove = async id => {
   await statisticService.remove(id);
   await settingsService.remove(id);
   await usersRepo.remove(id);
+  await userDataService.remove(id);
 };
 
 module.exports = { authenticate, get, save, update, remove };
